--- a/UTSvrBrowser.ini
+++ b/UTSvrBrowser.ini
@@ -2,12 +2,95 @@
 Version=1.0
 
 [UI]
-Left=300
-Top=232
-Right=1097
-Bottom=878
+Left=162
+Top=16
+Right=1256
+Bottom=980
 
 [Master]
-Server=unreal.epicgames.com
 Address=unreal.epicgames.com
 Port=28900
+Firewall=True
+FirstPort=7770
+LastPort=7790
+TrimSpace=True
+ConvSyms=True
+;Address=ut2003master2.epicgames.com
+;Port=28902
+
+[View]
+Column[0]=346
+Column[1]=98
+Column[2]=130
+Column[3]=0
+Column[4]=48
+Column[5]=65
+Column[6]=0
+Column[7]=0
+
+[Ping]
+Threads=25
+Attempts=3
+WaitTime=1000
+AutoPing=False
+Interval=3
+
+[Filters]
+Count=5
+Default=Strike Force
+Filter[0]=Default
+Filter[1]=Strike Force
+Filter[2]=Tactical Ops
+Filter[3]=SWAT Games
+Filter[4]=UT
+
+[Favourites]
+Detect=False
+UT=C:\Program Files\UnrealT\System\UnrealTournament.ini
+;Strike Force=C:\Program Files\UnrealT\System\SF.ini
+;Tactical Ops=C:\Program Files\UnrealT\System\Tactical.ini
+
+[Default Filter]
+Name=Default
+Description=All servers
+FilterMods=False
+Mods=
+FilterPing=False
+PingTime=250
+FilterErrors=True
+
+[Strike Force Filter]
+Name=Strike Force
+Description=Strike Force servers
+FilterMods=True
+Mods=Strike Force
+FilterPing=False
+PingTime=250
+FilterErrors=True
+
+[Tactical Ops Filter]
+Name=Tactical Ops
+Description=Tactical Ops servers
+FilterMods=True
+Mods=Tactical Ops
+FilterPing=False
+PingTime=250
+FilterErrors=True
+
+[SWAT Games Filter]
+Name=SWAT Games
+Description=SWAT Game servers
+FilterMods=True
+Mods=Strike Force,Tactical Ops,Infiltration
+FilterPing=False
+PingTime=250
+FilterErrors=True
+
+[UT Filter]
+Name=UT
+Description=UT servers
+FilterMods=True
+Mods=UT
+FilterPing=False
+PingTime=250
+FilterErrors=True
