--- a/UTSBMods.ini
+++ b/UTSBMods.ini
@@ -29,28 +29,15 @@ Mod[22]=HolyWars
 
 [UT]
 GameTypes=DeathMatchPlus,CTFGame,Domination,TeamGamePlus,LastManStanding,Assault
-Count=6
-GameType[0]=DeathMatchPlus,DM,S
-GameType[1]=CTFGame,CTF,T
-GameType[2]=Domination,DOM,T
-GameType[3]=TeamGamePlus,TDM,T
-GameType[4]=LastManStanding,LMS,S
-GameType[5]=Assault,AST,T
 FavsFile=UnrealTournament.ini
 
 [Strike Force]
 GameTypes=SFTeamDM,sfdm,SFEscape,SFHostageRescue
-Count=4
-GameType[0]=SFTeamDM,TDM,T
-GameType[1]=sfdm,DM,S
-GameType[2]=SFEscape,Escape,T
-GameType[3]=SFHostageRescue,Hostage Rescue,T
+FavsFile=StrikeForce.ini
 
 [Tactical Ops]
 GameTypes=s_SWATGame,TO340
-Count=2
-GameType[0]=s_SWATGame,Hostage Rescue,T
-GameType[1]=TO340,Hostage Rescue,T
+FavsFile=TacticalOps.ini
 
 [Thievery]
 GameTypes=ThieveryDeathMatchPlus,ThieveryThiefMatch,ThieveryCooperative
@@ -63,6 +50,7 @@ GameTypes=Game_unrealfortress
 
 [Infiltration]
 GameTypes=InfilTeamGamePlus,INFg_EASGame
+FavsFile=Infiltration.ini
 
 [Rocket Arena]
 GameTypes=RocketArenaGame,AnyMapRocketArenaGame
