--- a/UTSvrBrowser.ini
+++ b/UTSvrBrowser.ini
@@ -21,12 +21,14 @@ ConvSyms=True
 [View]
 Column[0]=346
 Column[1]=98
-Column[2]=130
+Column[2]=149
 Column[3]=0
 Column[4]=48
 Column[5]=65
 Column[6]=0
-Column[7]=0
+Column[7]=48
+SortCol=4
+SortDir=-1
 
 [Ping]
 Threads=25
@@ -36,19 +38,17 @@ AutoPing=False
 Interval=3
 
 [Filters]
-Count=5
-Default=Strike Force
+Count=8
+Default=Tactical Ops
 Filter[0]=Default
 Filter[1]=Strike Force
 Filter[2]=Tactical Ops
 Filter[3]=SWAT Games
 Filter[4]=UT
+Filter[5]=Sniper Arenas
+Filter[6]=Zark Sniper Arenas
+Filter[7]=InstaGib Arenas
 
-[Favourites]
-Detect=False
-UT=C:\Program Files\UnrealT\System\UnrealTournament.ini
-;Strike Force=C:\Program Files\UnrealT\System\SF.ini
-;Tactical Ops=C:\Program Files\UnrealT\System\Tactical.ini
 
 [Default Filter]
 Name=Default
@@ -58,6 +58,8 @@ Mods=
 FilterPing=False
 PingTime=250
 FilterErrors=True
+FilterNames=False
+Names=
 
 [Strike Force Filter]
 Name=Strike Force
@@ -66,7 +68,9 @@ FilterMods=True
 Mods=Strike Force
 FilterPing=False
 PingTime=250
-FilterErrors=True
+FilterErrors=False
+FilterNames=False
+Names=
 
 [Tactical Ops Filter]
 Name=Tactical Ops
@@ -76,6 +80,8 @@ Mods=Tactical Ops
 FilterPing=False
 PingTime=250
 FilterErrors=True
+FilterNames=False
+Names=
 
 [SWAT Games Filter]
 Name=SWAT Games
@@ -85,6 +91,8 @@ Mods=Strike Force,Tactical Ops,Infiltration
 FilterPing=False
 PingTime=250
 FilterErrors=True
+FilterNames=False
+Names=
 
 [UT Filter]
 Name=UT
@@ -94,3 +102,44 @@ Mods=UT
 FilterPing=False
 PingTime=250
 FilterErrors=True
+FilterNames=False
+Names=
+
+[Sniper Arenas Filter]
+Name=Sniper Arenas
+Description=UT Sniper Arenas
+FilterMods=True
+Mods=UT
+FilterPing=False
+PingTime=250
+FilterErrors=True
+FilterNames=True
+Names=sniper
+
+[Zark Sniper Arenas Filter]
+Name=Zark Sniper Arenas
+Description=UT Zark Sniper Arenas
+FilterMods=True
+Mods=UT
+FilterPing=False
+PingTime=250
+FilterErrors=True
+FilterNames=True
+Names=zark,rifle
+
+[InstaGib Arenas Filter]
+Name=InstaGib Arenas
+Description=UT InstaGib Arenas
+FilterMods=True
+Mods=UT
+FilterPing=False
+PingTime=250
+FilterErrors=True
+FilterNames=True
+Names=insta
+[Favourites]
+UT=C:\Program Files\UnrealT\System\UnrealTournament.ini
+Strike Force=C:\Program Files\UnrealT\System\StrikeForce.ini
+Tactical Ops=C:\Program Files\UnrealT\System\TacticalOps.ini
+Infiltration=C:\Program Files\UnrealT\System\Infiltration.ini
+Detect=False
