Split TO into Retail and MOD. Added a few missing mods.

--- a/UTSBMods.ini
+++ b/UTSBMods.ini
@@ -2,10 +2,10 @@
 Version=1.0
 
 [Mods]
-Count=23
+Count=30
 Mod[0]=UT
 Mod[1]=Strike Force
-Mod[2]=Tactical Ops
+Mod[2]=Tactical Ops (Retail)
 Mod[3]=Thievery
 Mod[4]=Jail Break
 Mod[5]=Unreal Fortress
@@ -26,18 +26,28 @@ Mod[19]=Carry The Flag
 Mod[20]=SlaveMaster
 Mod[21]=CTF4
 Mod[22]=HolyWars
+Mod[23]=Tactical Ops (Mod)
+Mod[24]=Siege
+Mod[25]=Scavenger Hunt
+Mod[26]=Bunny Track
+Mod[27]=Combat Zone
+Mod[28]=MultiCTF
+Mod[29]=NaPali Co-op
 
 [UT]
-GameTypes=DeathMatchPlus,CTFGame,Domination,TeamGamePlus,LastManStanding,Assault
+GameTypes=DeathMatchPlus,CTFGame,Domination,TeamGamePlus,LastManStanding,Assault,TTM_Main3,UTIntro
 FavsFile=UnrealTournament.ini
 
 [Strike Force]
 GameTypes=SFTeamDM,sfdm,SFEscape,SFHostageRescue
 FavsFile=StrikeForce.ini
 
-[Tactical Ops]
-GameTypes=s_SWATGame,TO340
+[Tactical Ops (Retail)]
+GameTypes=TO340,TOMAMod,TFMod
 FavsFile=TacticalOps.ini
+
+[Tactical Ops (Mod)]
+GameTypes=s_SWATGame
 
 [Thievery]
 GameTypes=ThieveryDeathMatchPlus,ThieveryThiefMatch,ThieveryCooperative
@@ -99,3 +109,21 @@ GameTypes=CTF4Game
 
 [HolyWars]
 GameTypes=HolyWarsGame
+
+[Siege]
+GameTypes=SiegeGI
+
+[Scavenger Hunt]
+GameTypes=SHGame
+
+[Bunny Track]
+GameTypes=BunnyTrackGame,BTctf
+
+[Combat Zone]
+GameTypes=CombatZoneDM
+
+[MultiCTF]
+GameTypes=MultiCTFGame
+
+[NaPali Co-op]
+GameTypes=coopgame2
