--- a/UTSvrBrowser.ini
+++ b/UTSvrBrowser.ini
@@ -6,9 +6,6 @@ Version=1.0
 [Master]
 Address=unreal.epicgames.com
 Port=28900
-Firewall=True
-FirstPort=7770
-LastPort=7790
 TrimSpace=True
 ConvSyms=True
 
@@ -33,16 +30,14 @@ Interval=3
 
 [Filters]
 Count=8
-Default=Tactical Ops
 Filter[0]=Default
-Filter[1]=Strike Force
-Filter[2]=Tactical Ops
-Filter[3]=SWAT Games
-Filter[4]=UT
+Filter[1]=UT
+Filter[2]=Tactical Ops (Retail)
+Filter[3]=Tactical Ops (Mod)
+Filter[4]=Strike Force
 Filter[5]=Sniper Arenas
 Filter[6]=Zark Sniper Arenas
 Filter[7]=InstaGib Arenas
-
 
 [Default Filter]
 Name=Default
@@ -66,11 +61,22 @@ FilterErrors=False
 FilterNames=False
 Names=
 
-[Tactical Ops Filter]
-Name=Tactical Ops
-Description=Tactical Ops servers
+[Tactical Ops (Retail) Filter]
+Name=Tactical Ops (Retail)
+Description=Tactical Ops (Retail) servers
 FilterMods=True
-Mods=Tactical Ops
+Mods=Tactical Ops (Retail)
+FilterPing=False
+PingTime=250
+FilterErrors=True
+FilterNames=False
+Names=
+
+[Tactical Ops (Mod) Filter]
+Name=Tactical Ops (Mod)
+Description=Tactical Ops (Mod) servers
+FilterMods=True
+Mods=Tactical Ops (Mod)
 FilterPing=False
 PingTime=250
 FilterErrors=True
