--- a/UTSvrBrowser.vcproj
+++ b/UTSvrBrowser.vcproj
@@ -99,6 +99,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="if not exist &quot;$(TargetDir)\UTSBMods.ini&quot; copy /y UTSBMods.ini $(TargetDir)&#x0D;&#x0A;if not exist &quot;$(TargetDir)\UTSvrBrowser.ini&quot; copy /y UTSvrBrowser.ini $(TargetDir)&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -184,6 +185,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="if not exist &quot;$(TargetDir)\UTSBMods.ini&quot; copy /y UTSBMods.ini $(TargetDir)&#x0D;&#x0A;if not exist &quot;$(TargetDir)\UTSvrBrowser.ini&quot; copy /y UTSvrBrowser.ini $(TargetDir)&#x0D;&#x0A;"
 			/>
 		</Configuration>
 	</Configurations>
